# fireguard

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CROSSCOMPILE.md  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.ci/: before_deploy.sh  install.sh  test.sh
.github/workflows/: build_and_test.yml  release.yml  rust.yml
doc/: setup.md
docker/: .gitignore  Dockerfile  entrypoint.sh
src/: config.rs  docker.rs  github.rs  ip.rs  lib.rs  shell.rs  upgrade.rs  utils.rs
src/cmd/: daemon.rs  dns.rs  docker.rs  mod.rs  peer.rs  repo.rs  upgrade.rs  wg.rs
src/wg/: boringtun.rs  config.rs  key.rs  mod.rs  quick.rs
templates/: wireguard.txt
