[package]
name = "fireguard"
version = "0.0.12"
authors = ["Bigo <bigo@crisidev.org>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clap = { version = "3.0.0-beta.2", features = ["wrap_help"] }
crossbeam-channel = "0.4"
color-eyre = "0.5"
env_logger = "0.8"
fork = "0.1"
futures = "0.3"
futures-util = "0.3"
guess_host_triple = "0.1"
ipnet = "2.3"
lazy_static = "1.4"
log = "0.4"
nix = "0.19"
openssl = { version = '0.10', features = ["vendored"] }
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
pretty_env_logger = "0.4"
rand = "0.8.2"
read_input = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tera = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util", "time", "fs", "net", "default"] }
toml = "0.5"
whoami = "1.0"

[dev-dependencies]
serde_cbor = "0.11"
pretty_assertions = "0.6"
serial_test = "0.4"
tempdir = "0.3"

[profile.dev]
debug = true

[[bin]]
name = "fireguard"
test = false
bench = false
